# landolfio

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Caddyfile  Dockerfile  LICENSE  README.md  docker-compose.yaml  entrypoint.sh  landolfio.nginx.conf  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  code_quality.md  feature_request.md
.github/workflows/: build-and-push.yaml  ci.yaml  ci.yml  deploy.yaml
deploy/: .env.example  Caddyfile  README.md  docker-compose.yml
landolfio/: manage.py
landolfio/accounting/: __init__.py  apps.py  services.py
landolfio/accounting/admin/: __init__.py  contact.py  document_style.py  estimate.py  general_journal_document.py  ledger_account.py  product.py  project.py  purchase_document.py  recurring_sales_invoice.py  sales_invoice.py  subscription.py  tax_rate.py  workflow.py
landolfio/accounting/api/: urls.py  views.py
landolfio/accounting/migrations/: 0001_initial.py  0002_alter_contact_bank_account_alter_contact_sepa_iban.py  0003_alter_contact_estimate_workflow_and_more.py  0003_remove_estimate_document_style_and_more.py  0004_alter_salesinvoicedocumentline_options_and_more.py  0005_contact__delete_from_moneybird_and_more.py  0008_alter_project_options_alter_taxrate_options_and_more.py  0009_alter_contact_attention_alter_contact_city_and_more.py  0010_alter_contact_chamber_of_commerce.py  0011_alter_contact_tax_number_alter_contact_zip_code.py  0012_alter_contact_sales_invoices_url_alter_estimate_url_and_more.py  0013_alter_estimatedocumentline_amount_and_more.py  0014_workflow_is_direct_debit_workflow_is_loan_and_more.py  0015_alter_estimate_state.py  0016_alter_journaldocumentline_options_and_more.py  0017_alter_estimate_options_and_more.py  0018_alter_contact_options_alter_documentstyle_options_and_more.py  0019_ledgeraccount_is_assets_inventory.py  0020_alter_contact_options_alter_documentstyle_options_and_more.py  0021_alter_journaldocumentline_contact.py
landolfio/accounting/models/: __init__.py  contact.py  document_style.py  estimate.py  general_journal_document.py  journal_document.py  ledger_account.py  product.py  project.py  purchase_document.py  (+5 more)
landolfio/inventory/: __init__.py  admin.py  admin_inlines.py  admin_views.py  apps.py  moneybird.py  resource_types.py  services.py  signals.py  tasks.py  views.py
landolfio/inventory_frontend/: apps.py  forms.py  urls.py  views.py
landolfio/moneybird/: admin.py  administration.py  apps.py  models.py  resource_types.py  resources.py  synchronization.py
landolfio/new_customers/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
landolfio/new_rental_customers/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
landolfio/ninox_import/: __init__.py  apps.py  ninox_sync.py
landolfio/rental_customers/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
landolfio/scantags/: __init__.py  admin.py  apps.py  models.py  settings.py  urls.py  views.py
landolfio/tickets/: admin.py  admin_filters.py  apps.py  models.py
landolfio/website/: __init__.py  admin.py  asgi.py  email.py  urls.py  views.py  wsgi.py
website/: manage.py
website/accounting/: __init__.py  admin.py  apps.py  models.py  moneybird_resources.py  services.py  sync_database.py  test_models.py  test_sync_database.py  test_update_database.py  update_database.py
website/asset_events/: __init__.py  admin.py  apps.py  models.py  signals.py
website/asset_media/: __init__.py  admin.py  apps.py  models.py
website/assets/: admin.py  apps.py  models.py  test_models.py
website/inventory/: __init__.py  admin.py  apps.py  models.py  signals.py  test_admin.py  test_models.py
website/landolfio/: admin.py  urls.py  wsgi.py
website/maintenance/: __init__.py  apps.py
website/media/: admin.py  models.py
website/moneybird/: admin.py  administration.py  models.py  resource_types.py  resources.py  settings.py  synchronization.py  views.py  webhooks.py
website/moneybird_accounting/: __init__.py  admin.py  apps.py  models.py  moneybird_sync.py  signals.py  tests.py
website/ninox_import/: ninox_sync.py
website/purchases/: __init__.py  apps.py
website/rentals/: __init__.py  apps.py
website/sales/: __init__.py  models.py
website/users/: __init__.py  admin.py  apps.py  models.py
website/website/: admin.py  asgi.py  custom_test_runner.py  settings.py  test_asgi.py  test_wsgi.py  urls.py  views.py  wsgi.py
(+514 files in other folders)
