[tool.poetry]
authors = ["Job Doesburg <job.doesburg@gmail.com>"]
description = ""
name = "landolfio"
version = "0.1.0"

[tool.poetry.dependencies]
Django = "^4.0.1"
python = "^3.9"
requests = "^2.27.1"
json2html = "^1.3.0"
django-queryable-properties = "^1.8.2"
bleach = "^5.0.1"
django-autocompletefilter = "^0.0.8"
django-countries = "^7.3.2"
django-localflavor = "^3.1"
django-model-utils = "^4.2.0"
sentry-sdk = "^1.9.0"
django-storages = "^1.12.3"
boto3 = "^1.24.40"
django-drf-filepond = "^0.4.1"
django-admin-numeric-filter = "^0.1.9"
django-bootstrap-v5 = "^1.0.11"
django-easy-admin-object-actions = "^1.1.0"
django-admin-multi-select-filter = "^1.0.0"
django-reorder-admin = "^0.3.1"

[tool.poetry.group.dev.dependencies]
black = "^22.1.0"
coverage = {extras = ["toml"], version = "^6.3.1"}
django-debug-toolbar = "^3.7.0"
django-coverage-plugin = "^2.0.2"
pre-commit = "^2.19.0"
pydocstyle = {extras = ["toml"], version = "^6.1.1"}
pylint = "^2.12.2"
toml-sort = "^0.19.0"
pylint-django = "^2.5.2"
dj-inmemorystorage = "^2.1.0"

[tool.poetry.group.prod.dependencies]
uWSGI = {version = "^2.0.19", optional = true}
gunicorn = "^20.1.0"
psycopg2 = {version = "^2.9.3", optional = true}

[tool.pydocstyle]
add-ignore = "D200"

[tool.pylint]

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.master]
load-plugins = ["pylint_django"]

[tool.pylint.messages_control]
disable = ""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

