[tool.poetry]
authors = ["Job Doesburg <job.doesburg@gmail.com>"]
description = ""
name = "landolfio"
version = "0.1.0"

[tool.poetry.dependencies]
Django = "^6.0"
python = "^3.12"
requests = "^2.32.3"
json2html = "^1.3.0"
django-queryable-properties = "^1.9.2"
bleach = "^6.2.0"
django-autocompletefilter = "^0.0.9"
django-countries = "^8.2.0"
django-localflavor = "^5.0"
django-model-utils = "^5.0.0"
django-storages = {extras = ["s3"], version = "^1.14.4"}
boto3 = "^1.35.95"
django-drf-filepond = "^0.5.0"
django-admin-numeric-filter = "^0.1.9"
django-easy-admin-object-actions = "^1.1.0"
django-admin-multi-select-filter = "^1.4.1"
django-reorder-admin = "^0.3.1"
django-bootstrap5 = "^25.1"
anthropic = "^0.75.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
coverage = {extras = ["toml"], version = "^7.9.2"}
django-debug-toolbar = "^6.1.0"
django-coverage-plugin = "^3.1.1"
pre-commit = "^4.2.0"
pydocstyle = {extras = ["toml"], version = "^6.3.0"}
pylint = "^3.3.7"
toml-sort = "^0.24.2"
pylint-django = "^2.6.1"
dj-inmemorystorage = "^2.1.0"

[tool.poetry.group.prod.dependencies]
uwsgi = "^2.0.28"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
sentry-sdk = "^2.33.0"

[tool.pydocstyle]
add-ignore = "D200"

[tool.pylint]

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.master]
load-plugins = ["pylint_django"]

[tool.pylint.messages_control]
disable = ""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

